src/test/fail/return_missing_in_nested_branch_fail.egern
func square(n: int): int {
    if (n > 3) {
        if (n >= 5) {
            return 1
        } else {
            if (3 == 3) {
                print(3)
            } else {
                return 4
            }
        }
    } else {
        return n * n
    }
}

square(4);
